fix grpc: use a new server middleware pipeline (#7)
fix grpc: use a new server middleware pipeline

--- a/configs/static_config.yaml
+++ b/configs/static_config.yaml
@@ -38,11 +38,9 @@ components_manager:
         grpc-server:
             port: 8081
             service-defaults:
-                middlewares:
-                  - grpc-server-logging
-                  - grpc-server-deadline-propagation
-                  - grpc-server-congestion-control
                 task-processor: main-task-processor
+
+        grpc-server-middlewares-pipeline:
 
         congestion-control:
         grpc-server-logging:
