--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,19 +9,19 @@ services:
         networks:
           - mongo
 
-    mongo_grpc_service_template-container:
+    service_template-container:
         image: ghcr.io/userver-framework/ubuntu-22.04-userver-pg:latest
         privileged: true
         environment:
           - PREFIX=${PREFIX:-~/.local}
-          - CCACHE_DIR=/mongo_grpc_service_template/.ccache
+          - CCACHE_DIR=/service_template/.ccache
           - CORES_DIR=/cores
         volumes:
-          - .:/mongo_grpc_service_template:rw
+          - .:/service_template:rw
         ports:
           - 8080:8080
           - 8081:8081
-        working_dir: /mongo_grpc_service_template
+        working_dir: /service_template
         entrypoint:
           - ./tests/run_as_user.sh
         depends_on:
